# mcpgw

./: .gitattributes  .gitignore  Cargo.toml
.github/workflows/: pages.yml
crates/catalog/: Cargo.toml
crates/catalog/src/: lib.rs
crates/chat/: Cargo.toml
crates/chat/src/: lib.rs
crates/chat/tests/: openai_chat.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/dashboard/: Cargo.toml
crates/dashboard/assets/: app.js  index.html  style.css
crates/dashboard/src/: about.rs  activity.rs  admin.rs  admin_config.rs  api.rs  assets.rs  calls.rs  history.rs  lib.rs  metrics.rs  trace.rs
crates/dashboard/ui/: index.html  package-lock.json  package.json  vite.config.js
crates/dashboard/ui/src/: App.svelte  app.css  main.js
crates/dashboard/ui/src/lib/: About.svelte  Activity.svelte  CallDetail.svelte  Calls.svelte  Config.svelte  CopyButton.svelte  DisableToggle.svelte  FormEditor.svelte  Icon.svelte  Nav.svelte  Overview.svelte  RawEditor.svelte  RecentCalls.svelte  SectionAudit.svelte  SectionDashboard.svelte  SectionRetrieval.svelte  SectionServer.svelte  SectionUpstreams.svelte  Sparkline.svelte  ToolDetail.svelte  Tools.svelte  TraceDetail.svelte  Traces.svelte  UpstreamDetail.svelte  Upstreams.svelte  admin.svelte.js  api.js  bucketSel.svelte.js  configSchema.js  format.js  refresh.svelte.js  router.svelte.js  smoke.test.js  toml.js  toml.test.js  validate.js  validate.test.js
crates/downstream/: Cargo.toml
crates/downstream/src/: http.rs  lib.rs
crates/downstream/tests/: http_server.rs  server.rs
crates/downstream/tests/common/: mod.rs
crates/embedder/: Cargo.toml
crates/embedder/src/: lib.rs
crates/embedder/tests/: openai.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: disable.rs  lib.rs
crates/gateway/tests/: disable.rs  rebuild.rs  reconcile.rs
crates/mcpgw/: Cargo.toml  build.rs
crates/mcpgw/src/: main.rs
crates/mcpgw/tests/: audit.rs  cli.rs  dashboard.rs  smoke_real.rs  smoke_vector_real.rs
crates/metatools/: Cargo.toml
crates/metatools/src/: error.rs  lib.rs  snapshot.rs  tools.rs
crates/metatools/tests/: call_tool.rs
crates/observe/: Cargo.toml
crates/observe/src/: audit.rs  discovery.rs  lib.rs
crates/observe/tests/: capture.rs
crates/retrieval/: Cargo.toml
crates/retrieval/src/: caching.rs  chat.rs  embedder.rs  hybrid.rs  lib.rs  subagent.rs  vector.rs
crates/retrieval/tests/: caching.rs  embedder.rs  golden.rs  hybrid.rs  subagent.rs  vector.rs
crates/upstream/: Cargo.toml
crates/upstream/src/: connect.rs  connection.rs  lib.rs  mapping.rs  registry.rs  testkit.rs
crates/upstream/tests/: http_connect.rs  integration.rs
docs/: L1-overview.md  README.md
docs/L2-components/: catalog.md  chat.md  config.md  dashboard.md  downstream.md  embedder.md  gateway.md  mcpgw-cli.md  metatools.md  observe.md  retrieval.md  upstream.md
docs/L3-details/: catalog.md  config.md  dashboard.md  downstream.md  gateway.md  mcpgw-cli.md  metatools.md  retrieval.md  upstream.md
docs/L4-api/: catalog-lib.md  chat-openai.md  config-lib.md  dashboard.md  downstream-http.md  downstream-lib.md  embedder-openai.md  gateway-lib.md  mcpgw-main.md  metatools-snapshot.md  metatools-tools.md  observe-audit.md  observe-lib.md  retrieval-embedder.md  retrieval-hybrid.md  retrieval-lib.md  retrieval-subagent.md  retrieval-vector.md  upstream-connect.md  upstream-connection.md  upstream-mapping.md  upstream-registry.md
docs/superpowers/plans/: 2026-06-08-mcpgw-m1a-upstream-ingestion.md  2026-06-08-mcpgw-program-roadmap.md  2026-06-08-mcpgw-retrieval-core.md  2026-06-09-mcpgw-m1b1-gateway-metatools.md  2026-06-10-mcpgw-m1b2-downstream-serve.md  2026-06-11-mcpgw-m1c-http-auth.md  2026-06-13-mcpgw-m2a-vector-retrieval.md  2026-06-13-mcpgw-m2b-hybrid-retrieval.md  2026-06-13-mcpgw-visual-guide.md  2026-06-14-mcpgw-m2t5-subagent-retrieval.md  2026-06-14-mcpgw-m6t1-observe.md  2026-06-15-mcpgw-audit-remediation.md  2026-06-15-mcpgw-m6t3-audit-jsonl.md  2026-06-15-mcpgw-runtime-robustness.md  2026-06-16-mcpgw-audit-cleanup.md  2026-06-16-mcpgw-audit-pass2.md  2026-06-16-mcpgw-dashboard.md  2026-06-17-mcpgw-dashboard-audit-fixes.md  2026-06-17-mcpgw-m1-call-records-data-layer.md  2026-06-17-mcpgw-m2-dashboard-frontend.md  2026-06-18-mcpgw-m1-call-payload-capture.md  2026-06-18-mcpgw-m2-call-payload-filtering.md  2026-06-18-mcpgw-m3-dashboard-drilldown-detail.md  2026-06-22-mcpgw-activity-sparkline-interaction.md  2026-06-22-mcpgw-dashboard-about-view.md  2026-06-22-mcpgw-dashboard-activity-insights.md  2026-06-22-mcpgw-dashboard-runtime-disable.md  2026-06-23-mcpgw-dashboard-config-edit-hot-reload.md  2026-06-23-mcpgw-dashboard-config-form-editor.md  2026-06-23-mcpgw-dashboard-config-form-restyle.md  2026-06-24-mcpgw-dashboard-config-field-help.md
docs/superpowers/specs/: 2026-06-08-mcpgw-m1-live-gateway-design.md  2026-06-08-mcpgw-progressive-discovery-design.md  2026-06-09-mcpgw-m1b-gateway-design.md  2026-06-10-mcpgw-m1b2-downstream-serve.md  2026-06-11-mcpgw-m1c-http-auth-design.md  2026-06-13-mcpgw-m2a-vector-retrieval-design.md  2026-06-13-mcpgw-m2b-hybrid-retrieval-design.md  2026-06-13-mcpgw-visual-guide-design.md  2026-06-14-mcpgw-m2t5-subagent-retrieval-design.md  2026-06-14-mcpgw-m6-observability-design.md  2026-06-15-mcpgw-audit-remediation-design.md  2026-06-15-mcpgw-m6t3-audit-jsonl-design.md  2026-06-15-mcpgw-runtime-robustness-design.md  2026-06-16-mcpgw-audit-cleanup-design.md  (+13 more)
mcpgw-visual-guide/: README.md  index.html
mcpgw-visual-guide/lessons/: 01-what-is-mcpgw.html  02-architecture.html  03-call-lifecycle.html  04-vector-overview.html  05-embedder.html  06-caching-embedder.html  07-vector-strategy.html  08-wiring-config.html  09-catalog.html  10-upstream.html  11-gateway-metatools.html  12-downstream.html  13-retrieval-bm25.html  14-config.html  15-hybrid-rrf.html
mcpgw-visual-guide/src/: build.py  check_links.py  part1_macro.py  part2_vector.py  part3_internals.py  part4_next.py  placeholder.py  registry.py  shell.py
scripts/: embed_check.py
tests/fixtures/: tools.json
