[workspace]
resolver = "2"
members = ["crates/catalog"]
# Future members (added by later tasks; cargo requires each manifest to exist):
# "crates/retrieval", "crates/config", "crates/mcpgw"

[workspace.package]
edition = "2021"
rust-version = "1.86"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
