[workspace]
resolver = "2"
members = ["crates/catalog", "crates/retrieval", "crates/config", "crates/mcpgw", "crates/upstream", "crates/metatools", "crates/gateway", "crates/downstream", "crates/embedder", "crates/chat"]

[workspace.package]
edition = "2021"
rust-version = "1.86"

[workspace.dependencies]
arc-swap = "1"
async-trait = "0.1"
axum = "0.8"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
rmcp = { version = "1.7", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "process", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
