[package]
name = "downstream"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
gateway = { path = "../gateway" }
metatools = { path = "../metatools" }
rmcp = { workspace = true, features = ["server", "transport-io", "transport-streamable-http-server"] }
serde_json = { workspace = true }
axum = "0.8"

[dev-dependencies]
upstream = { path = "../upstream", features = ["testkit"] }
retrieval = { path = "../retrieval" }
rmcp = { workspace = true, features = ["client", "server", "transport-io", "transport-streamable-http-client-reqwest"] }
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
