[package]
name = "downstream"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
gateway = { path = "../gateway" }
metatools = { path = "../metatools" }
observe = { path = "../observe" }
rmcp = { workspace = true, features = ["server", "transport-io", "transport-streamable-http-server"] }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
subtle = "2"

[dev-dependencies]
upstream = { path = "../upstream", features = ["testkit"] }
retrieval = { path = "../retrieval" }
observe = { path = "../observe", features = ["testkit"] }
rmcp = { workspace = true, features = ["client", "server", "transport-io", "transport-streamable-http-client-reqwest"] }
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
