[package]
name = "gateway"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
catalog = { path = "../catalog" }
retrieval = { path = "../retrieval" }
upstream = { path = "../upstream" }
metatools = { path = "../metatools" }
arc-swap = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "time"] }

[dev-dependencies]
upstream = { path = "../upstream", features = ["testkit"] }
tokio = { workspace = true, features = ["full"] }
rmcp = { workspace = true, features = ["client", "server", "macros", "transport-io"] }
