[package]
name = "mcpgw"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
catalog = { path = "../catalog" }
retrieval = { path = "../retrieval" }
embedder = { path = "../embedder" }
chat = { path = "../chat" }
config = { path = "../config" }
gateway = { path = "../gateway" }
upstream = { path = "../upstream" }
downstream = { path = "../downstream" }
serde_json = { workspace = true }
clap = { workspace = true }
rmcp = { workspace = true, features = ["server", "transport-io"] }
axum = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "net", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
upstream = { path = "../upstream", features = ["testkit"] }
metatools = { path = "../metatools" }
rmcp = { workspace = true, features = ["client", "server", "transport-io", "transport-child-process", "transport-streamable-http-client-reqwest"] }
tokio = { workspace = true, features = ["full"] }
