[package]
name = "metatools"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
catalog = { path = "../catalog" }
retrieval = { path = "../retrieval" }
upstream = { path = "../upstream" }
rmcp = { workspace = true, features = ["client", "server", "macros", "transport-child-process", "transport-io"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
upstream = { path = "../upstream", features = ["testkit"] }
tokio = { workspace = true, features = ["full"] }
