[package]
name = "retrieval"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
catalog = { path = "../catalog" }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
