[package]
name = "retrieval"
version = "0.1.0"
edition = { workspace = true }

[features]
testkit = []

[dependencies]
catalog = { path = "../catalog" }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

[[test]]
name = "embedder"
required-features = ["testkit"]

[[test]]
name = "caching"
required-features = ["testkit"]
