[package]
name = "retrieval"
version = "0.1.0"
edition = { workspace = true }

[features]
testkit = []

[dependencies]
catalog = { path = "../catalog" }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[[test]]
name = "embedder"
required-features = ["testkit"]

[[test]]
name = "caching"
required-features = ["testkit"]

[[test]]
name = "vector"
required-features = ["testkit"]

[[test]]
name = "hybrid"
required-features = ["testkit"]

[[test]]
name = "subagent"
required-features = ["testkit"]
