[package]
name = "upstream"
version = "0.1.0"
edition = { workspace = true }

[features]
testkit = []

[dependencies]
catalog = { path = "../catalog" }
config = { path = "../config" }
rmcp = { workspace = true, features = ["client", "server", "macros", "transport-child-process", "transport-io", "transport-streamable-http-client-reqwest"] }
http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
schemars = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
rmcp = { workspace = true, features = ["transport-streamable-http-server"] }

# The integration test uses the in-memory mock, which lives behind the `testkit`
# feature. Declaring it here makes `cargo test` (without the flag) SKIP this target
# rather than fail to compile.
[[test]]
name = "integration"
required-features = ["testkit"]

[[test]]
name = "http_connect"
required-features = ["testkit"]

[[bin]]
name = "mock-stdio"
required-features = ["testkit"]
